--- a/package.json
+++ b/package.json
@@ -4,7 +4,24 @@
 	"main": "index.ts",
 	"scripts": {
 		"start:dev": "nodemon",
-		"format:prettier": "npx prettier --write src/**/*.ts"
+		"format:prettier": "npx prettier --write src/**/*.ts",
+		"prepare": "husky install"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.{js,jsx}": [
+			"prettier --write",
+			"eslint --fix",
+			"git add"
+		],
+		"*.{html,css,less,ejs}": [
+			"prettier --write",
+			"git add"
+		]
 	},
 	"author": {
 		"email": "bengtson.neves@gmail.com",
@@ -17,9 +34,17 @@
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.15",
+		"@typescript-eslint/eslint-plugin": "^5.49.0",
+		"eslint": "^8.32.0",
+		"eslint-config-standard-with-typescript": "^33.0.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-n": "^15.6.1",
+		"eslint-plugin-promise": "^6.1.1",
+		"husky": "^8.0.3",
+		"lint-staged": "^13.1.0",
 		"morgan": "^1.10.0",
 		"nodemon": "^2.0.20",
-		"prettier": "^2.8.2",
+		"prettier": "^2.8.3",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4"
 	}
