--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 	},
 	"dependencies": {
 		"dotenv": "^16.0.3",
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"tsconfig-paths": "^4.1.2"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.15",
