--- a/package.json
+++ b/package.json
@@ -29,12 +29,16 @@
 		"url": "https://github.com/JBN1997"
 	},
 	"dependencies": {
+		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
+		"helmet": "^6.0.1",
 		"tsconfig-paths": "^4.1.2"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.15",
+		"@types/morgan": "^1.9.4",
 		"@typescript-eslint/eslint-plugin": "^5.49.0",
 		"eslint": "^8.32.0",
 		"eslint-config-standard-with-typescript": "^33.0.0",
