--- a/package.json
+++ b/package.json
@@ -29,15 +29,18 @@
 		"url": "https://github.com/JBN1997"
 	},
 	"dependencies": {
+		"@types/yup": "^0.32.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"helmet": "^6.0.1",
+		"lodash": "^4.17.21",
 		"tsconfig-paths": "^4.1.2"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.15",
+		"@types/lodash": "^4.14.191",
 		"@types/morgan": "^1.9.4",
 		"@typescript-eslint/eslint-plugin": "^5.49.0",
 		"eslint": "^8.32.0",
